# point_cloud_voxel_gauss

./: CMakeLists.txt  README.md  deal_datasets.cpp  get_pcd.cpp  main.cpp  voxel_random_gauss.cpp  voxel_random_gauss.h
pcd_dir/: 0.pcd  1.pcd
